--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,29 @@
-.container{
-    background-image: url("assets/images/Background.jpg");
+body{
+    background-image: url("../images/Background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+.display-4{
+    text-align: center;
+    color:#0079B3;  
+}
+
+.timeTitle{
+    text-align: center;
+    color:#0079B3;  
+    font-family: 'Abel', sans-serif;
+}
+
+.allText{
+   text-align: left;
+    color:#0079B3;  
+    font-family: 'Abel', sans-serif;
+}
+
+label{
+    text-align: left;
+    color:#0079B3;  
+    font-family: 'Abel', sans-serif;
+}
+
+
